# pneumonai-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: blank.yml
configs/: ingestion.yaml  model_release.yaml  preprocessing.yaml  splits.yaml  training.yaml
data/: README.md
data/fixtures/monochrome1/: input.dcm  output.npy
data/fixtures/nonsquare/: input.dcm  output.npy
data/fixtures/normal/: input.dcm  output.npy
data/fixtures/uniform/: input.dcm  output.npy
exports/: checksum.sha256  metadata.yaml  model_card.yaml  reference_feats.npy  reference_logits.npy  reference_output.npy
exports/gradcam_fixtures/: negative_heatmap.npy  positive_heatmap.npy
notebooks/: 01_rsna_data_exploration.ipynb  02_train_experiments.ipynb  03_evaluation_report.ipynb
reports/: evaluation_report.yaml
scripts/: __init__.py  create_splits.py  evaluate.py  export.py  generate_preprocessing_fixtures.py  ingest_rsna.py  train.py
src/pneumonai/: __init__.py
src/pneumonai/data/: __init__.py  ingest.py  rsna.py  schema.py  splits.py  validation.py
src/pneumonai/explainability/: gradcam.py
src/pneumonai/preprocessing/: __init__.py  specification.py  transform.py
src/pneumonai/training/: dataset.py  model.py  trainer.py
tests/data/: test_ingest.py  test_ingest_cli.py  test_rsna.py  test_schema.py  test_splits.py  test_splits_cli.py  test_validation.py
tests/preprocessing/: test_specification.py  test_transform.py
