[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pneumonai-ml"
version = "0.1.0"
description = "Training, explainability, and model export for PneumonAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "pydicom>=3,<4",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4,<5",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

