[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pneumonai-ml"
version = "0.1.0"
description = "Training, explainability, and model export for PneumonAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "torch>=2.4,<3",
    "matplotlib>=3.9,<4",
    "pydicom>=3,<4",
    "PyYAML>=6,<7",
    "torchvision>=0.19,<1",
    "grad-cam>=1.5,<2",
    "opencv-python>=4.9,<5",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4,<5",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
